samples/_failures_safe/1761286409_0e9df7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_363a006c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_363a006c.c:169:5: error: expected expression at end of input
  169 |     if (graph == NULL || src < 0 || src >= graph->num_nodes || graph->num_nodes > MAX_NODES)
      |     ^~
./samples/SAFE/__tmp_363a006c.c:169:5: error: expected declaration or statement at end of input
